--- a/home.css
+++ b/home.css
@@ -22,7 +22,7 @@
     content: "";
     display: block;
     position: absolute;
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.7921568627)), url("../../img/header/luisa-brimble-aFzg83dvnAI-unsplash.jpg");
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.7921568627)), url("/img/header/luisa-brimble-aFzg83dvnAI-unsplash.jpg");
     left: 0;
     top: 0;
     width: 100%;
