--- a/Pages/Historia/historia.css
+++ b/Pages/Historia/historia.css
@@ -68,6 +68,7 @@
     gap: 20px;
     align-items: center;
     justify-content: center;
+    padding: 0 20px;
 }
 
 .escrita-1 {
@@ -109,11 +110,15 @@
     border: none;
     background-color: rgb(255, 69, 69);
     padding: 5px 15px;
-    font-size: 17px;
-    color: white;
-    font-weight: 600;
     border-radius: 7px;
     cursor: pointer;
+}
+
+.button-detalhe .contact a {
+    color: white;
+    font-weight: 600;
+    font-size: 17px;
+    text-decoration: none;
 }
 
 .button-detalhe .contact:hover {
