Signed-off-by: luizh3nrique <luizh3nrique00@gmail.com>

--- a/home.css
+++ b/home.css
@@ -300,7 +300,7 @@
 .parallax {
     margin-top: 150px;
     margin-bottom: 150px;
-    background-image: url("../../img/alex-haney-CAhjZmVk5H4-unsplash.jpg");
+    background-image: url("/img/alex-haney-CAhjZmVk5H4-unsplash.jpg");
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
