--- a/global.css
+++ b/global.css
@@ -222,7 +222,7 @@ body {
     content: "";
     display: block;
     position: absolute;
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.325), rgba(0, 0, 0, 0.858)), url("../../img/daan-evers-tKN1WXrzQ3s-unsplash.jpg");
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.325), rgba(0, 0, 0, 0.858)), url("/img/daan-evers-tKN1WXrzQ3s-unsplash.jpg");
     left: 0;
     top: 0;
     width: 100%;
