--- a/Pages/Menu/menu.css
+++ b/Pages/Menu/menu.css
@@ -44,7 +44,16 @@
     font-weight: bold;
 }
 
+@media screen and (max-width:518px) {
+    .inicio-conteudo h1 {
+        font-size: 40px;
+    }
 
+    .inicio-conteudo p {
+        font-size: 15px;
+        text-align: center;
+    }
+}
 
 
 .menuContainer {
